# libstatgrab

./: configure.ac
tests/single_threaded/: Makefile.am
tests/testlib/: Makefile.am
